<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:clickable="false"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:layout_weight="1"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:contentDescription="@string/go_to_easy_sound_controller_home_screen"
        android:focusable="true"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:padding="5dp"
        android:src="@drawable/home_35" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:layout_weight="1"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:contentDescription="@string/put_the_phone_to_silent_mode"
        android:focusable="true"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:padding="5dp"
        android:src="@drawable/notifications_off_35" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:layout_weight="1"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:contentDescription="@string/put_the_phone_to_vibration_mode"
        android:focusable="true"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:padding="5dp"
        android:src="@drawable/vibration_35" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:layout_weight="1"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:contentDescription="@string/put_the_phone_to_normal_mode"
        android:focusable="true"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:padding="5dp"
        android:src="@drawable/notifications_on_35" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:layout_weight="1"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:contentDescription="@string/adjust_media_volume"
        android:focusable="true"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:padding="5dp"
        android:src="@drawable/music_on_35" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:layout_weight="1"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:contentDescription="@string/close_this_notification_volume_control_service"
        android:contextClickable="true"
        android:focusable="true"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:padding="5dp"
        android:src="@drawable/close_35" />

</LinearLayout>